# yoi

./: .dockerignore  .env-example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.runtime.gpu.txt  requirements.runtime.txt  requirements.txt
config_builder/: __init__.py  main.py  models.py  requirements.txt
config_builder/services/: config_service.py  feature_params_service.py  logger_service.py
config_builder/static/: app.js  style.css
config_builder/templates/: index.html
config_builder/tests/: test_integration.py
docker/: Dockerfile.config-builder  Dockerfile.cpu  Dockerfile.gpu
docs/assets/engine/source/: flow_service.mmd  flowchart_final.mmd  flowchart_readme.mmd
docs/documentation/: architecture.md  before-run-checklist.md  configuration-builder.md  deployment.md  devtools-command-mapping.md  operations.md  runtime-flow.md
src/: __init__.py  export_openvino.py  inference.py
src/app/: __init__.py  main.py
src/exception/: __init__.py  base_exceptions.py
tests/: __init__.py  conftest.py  test_config.py  test_config_builder_output.py  test_config_features.py  test_geometry_and_models.py  test_model_loading.py  test_output_layout.py  test_yolo_device_fallback.py
tests/fixtures/configs/: line-cross-sample.yaml
yoi/: __init__.py  config.py
yoi/alert/: __init__.py  manager.py
yoi/analytics/: __init__.py  analytics.py
yoi/annotate/: __init__.py  video_annotator.py
yoi/components/: __init__.py  engine.py  engine_feature_mapping.py  engine_output_lifecycle.py  video_reader.py
yoi/devtools/: dev.ps1  dev.sh
yoi/features/: __init__.py  base.py  dwell_time.py  line_cross.py  region_crowd.py
yoi/inference/: __init__.py  yolo.py
yoi/logs/: analytics.dwelltime-rtsp-multi.json  analytics.kluis-line.json
yoi/output/: __init__.py  exporters.py
yoi/pipeline/: __init__.py  runtime_pipeline.py
yoi/stream/: __init__.py  rtsp_pusher.py  rtsp_reader.py  utils.py
yoi/tracking/: __init__.py  object_tracker.py  reid_service.py
yoi/utils/: __init__.py  logger.py
