[project]
name = "inference"
version = "1.0.0"
description = "Inference using Ultralytics YOLO"
requires-python = ">=3.9"

dependencies = [
  "ultralytics",
  "opencv-python",
  "python-dotenv",
  "rich",
  "openvino>=2024.0.0",
]

[project.optional-dependencies]
onnx = [
  "onnxruntime>=1.17.0",
]
